Fix comment overflow

--- a/style.css
+++ b/style.css
@@ -407,6 +407,8 @@ embed {
 
 .commentContent {
     margin-top: 0;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
 
 #signIn {
